--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,8 @@
   "version": 2,
   "functions": {
     "api/**/*.php": {
-      "runtime": "vercel-php@0.7.0"
-    },
-    "**/*.php": {
-      "runtime": "vercel-php@0.7.0"
+      "runtime": "vercel-php@0.6.0"
     }
-  },
-  "env": {
-    "DATABASE_URL": "postgres://neondb_owner:npg_hyng4Q2aGNdP@ep-noisy-bush-a4xycth8-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&options=endpoint%3Dep-noisy-bush-a4xycth8",
-    "PGHOST": "ep-noisy-bush-a4xycth8-pooler.us-east-1.aws.neon.tech",
-    "PGUSER": "neondb_owner",
-    "PGDATABASE": "neondb",
-    "PGPASSWORD": "npg_hyng4Q2aGNdP",
-    "PGPORT": "5432"
   },
   "routes": [
     {
@@ -34,31 +23,8 @@
       "dest": "/api/recuperar.php"
     },
     {
-      "src": "/(.*\\.(html|css|js|png|jpg|jpeg|gif|svg|ico))",
+      "src": "/(.*\\.(html|css|js|png|jpg|jpeg|gif|svg|ico|php))",
       "dest": "/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "X-Requested-With, Content-Type, Accept, Authorization"
-        }
-      ]
     }
   ]
 }
